// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Snapshots renders correctly in disabled state 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={true}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md opacity-50 cursor-not-allowed"
      disabled={true}
      id="select-gazy0xh"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly in readonly state 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={true}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md opacity-70 cursor-default"
      disabled={false}
      id="select-z4dek60"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with custom class names 1`] = `
<div
  className=" container-class"
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1 label-class"
    htmlFor="select-vsu4hrc"
  >
    Label
  </label>
  <div
    className="relative"
  >
    <select
      aria-describedby="select-vsu4hrc-helper"
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md custom-class"
      disabled={false}
      id="select-vsu4hrc"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 helper-class"
      id="select-vsu4hrc-helper"
    >
      Helper
    </p>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with default props 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-8kobbf3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with error message 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-describedby="select-htfcksw-error"
      aria-disabled={false}
      aria-invalid="true"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base border-red-500 dark:border-red-400 focus:ring-red-500 focus:border-red-500 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-htfcksw"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-red-600 dark:text-red-400 "
      id="select-htfcksw-error"
      role="alert"
    >
      Error Message
    </p>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with filled variant 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-gray-100 dark:bg-gray-800 border-transparent pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-2bhh9h3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with full width 1`] = `
<div
  className="w-full "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-8yuxa1p"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with grouped options 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-uf43mfz"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <optgroup
        label="Group 1"
      >
        <option
          value="option1"
        >
          Option 1
        </option>
        <option
          value="option2"
        >
          Option 2
        </option>
      </optgroup>
      <optgroup
        label="Group 2"
      >
        <option
          value="option3"
        >
          Option 3
        </option>
      </optgroup>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with helper text 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-describedby="select-5qskt83-helper"
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-5qskt83"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 "
      id="select-5qskt83-helper"
    >
      Helper Text
    </p>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with label 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1 "
    htmlFor="select-q2mz1kj"
  >
    Test Label
  </label>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-q2mz1kj"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with large size 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-5 py-3 text-lg focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-a3lxcre"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with left icon 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 dark:text-gray-500"
    >
      <span>
        ★
      </span>
    </div>
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 pl-10 rounded-md"
      disabled={false}
      id="select-5e1uvi4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with multiple props combined 1`] = `
<div
  className="w-full container-class"
  title="Tooltip Text"
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1 label-class"
    htmlFor="select-h23gl5p"
  >
    Combined Select
    <span
      className="text-red-500 ml-1"
    >
      *
    </span>
  </label>
  <div
    className="relative"
  >
    <div
      className="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none text-gray-400 dark:text-gray-500"
    >
      <span>
        ★
      </span>
    </div>
    <select
      aria-describedby="select-h23gl5p-helper"
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={true}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-gray-100 dark:bg-gray-800 border-transparent pr-8 px-5 py-3 text-lg focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 pl-10 rounded-md shadow-sm custom-class"
      disabled={false}
      id="select-h23gl5p"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        disabled={true}
        hidden={true}
        value=""
      >
        Select an option
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
  <div
    className="mt-1 text-sm"
  >
    <p
      className="text-gray-500 dark:text-gray-400 helper-class"
      id="select-h23gl5p-helper"
    >
      Helper Text
    </p>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with option descriptions 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-o86fzzj"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        data-description="Description 1"
        title="Description 1"
        value="option1"
      >
        Option 1
      </option>
      <option
        data-description="Description 2"
        title="Description 2"
        value="option2"
      >
        Option 2
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with outlined variant 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-transparent border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-irkovdh"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with placeholder 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-z8ss2u8"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        disabled={false}
        hidden={false}
        value=""
      >
        Select an option
      </option>
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with required indicator 1`] = `
<div
  className=" "
>
  <label
    className="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1 "
    htmlFor="select-hutlba1"
  >
    Test Label
    <span
      className="text-red-500 ml-1"
    >
      *
    </span>
  </label>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={true}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-hutlba1"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with right icon 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-xe7xie4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <span>
        ★
      </span>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with shadow 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md shadow-sm"
      disabled={false}
      id="select-gxffxrn"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with small size 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-3 py-1.5 text-sm focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-g01wgp0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with tooltip 1`] = `
<div
  className=" "
  title="Tooltip Text"
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-1xr69a5"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with transparent background 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full bg-transparent text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-kzwdto5"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly with unstyled variant 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-transparent border-0 p-0 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-0y5k1fj"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly without border 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700  pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-0mrkk4w"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly without focus effect 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-aba3w8u"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly without hover effect 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 rounded-md"
      disabled={false}
      id="select-7td004w"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly without rounded corners 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 transition duration-150 ease-in-out appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500"
      disabled={false}
      id="select-2wfzdox"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select Snapshots renders correctly without transition effect 1`] = `
<div
  className=" "
>
  <div
    className="relative"
  >
    <select
      aria-disabled={false}
      aria-invalid="false"
      aria-readonly={false}
      aria-required={false}
      className="block focus:outline-none focus:ring-2 appearance-none w-full text-gray-900 dark:text-white bg-white dark:bg-gray-700 border border-gray-300 dark:border-gray-600 pr-8 px-4 py-2 text-base focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-400 dark:focus:border-primary-400 hover:border-gray-400 dark:hover:border-gray-500 rounded-md"
      disabled={false}
      id="select-jifocz7"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
    >
      <option
        value="option1"
      >
        Option 1
      </option>
      <option
        value="option2"
      >
        Option 2
      </option>
      <option
        disabled={true}
        value="option3"
      >
        Option 3
      </option>
    </select>
    <div
      className="absolute inset-y-0 right-0 flex items-center px-2 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        className="h-4 w-4 text-gray-400"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 9l-7 7-7-7"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</div>
`;
